bin/tests/snapshots/collapsible_inherits__1a53ae1d49f051564eb28ab1a7de05cd_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
let
  inherit (pkgs) foo;
  name = "x";
in
  name
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 let
   inherit (pkgs) foo;
+
   name = "x";
 in
   name
