bin/tests/snapshots/collapsible_inherits__1a53ae1d49f051564eb28ab1a7de05cd_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
let
  inherit (pkgs) foo;
  name = "x";
in
  name
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
