bin/tests/snapshots/collapsible_inherits__1a53ae1d49f051564eb28ab1a7de05cd_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
let
  inherit (pkgs) foo;
  name = "x";
in
  name
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   name = "x";
   │   ─────┬─────  
   │        ╰─────── a blank line should follow the inherit above
───╯
