bin/tests/snapshots/collapsible_inherits__3561df04c2a4725fce096a250fd0c62d_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo bar;
  inherit (pkgs) baz;
}
---
<temp_file_path>>2:22:W:39:[inherit_ordering] `bar` is out of alphabetical order
<temp_file_path>>3:3:W:37:[collapsible_inherits] These consecutive `inherit` statements can be merged into one
