bin/tests/snapshots/collapsible_inherits__3561df04c2a4725fce096a250fd0c62d_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo bar;
  inherit (pkgs) baz;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_inherits",
      "note": "Consecutive inherit statements are collapsible",
      "code": 37,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 22
            }
          },
          "message": "These consecutive `inherit` statements can be merged into one",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 3,
                "column": 22
              }
            },
            "fix": "inherit (pkgs) foo bar baz;"
          }
        }
      ]
    }
  ]
}
