bin/tests/snapshots/collapsible_inherits__3561df04c2a4725fce096a250fd0c62d_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo bar;
  inherit (pkgs) baz;
}
---
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit (pkgs) baz;
   │   ─────────┬─────────  
   │            ╰─────────── These consecutive inherit statements can be merged into one
───╯
