bin/tests/snapshots/collapsible_inherits__41ad8578422acbeea6b27752ebb21f46_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
  inherit (pkgs) baz;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,3 @@
 {
-  inherit (pkgs) foo;
-  inherit (pkgs) bar;
-  inherit (pkgs) baz;
+  inherit (pkgs) bar baz foo;
 }
