bin/tests/snapshots/collapsible_inherits__41ad8578422acbeea6b27752ebb21f46_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
  inherit (pkgs) baz;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_inherits",
      "note": "Consecutive inherit statements are collapsible",
      "code": 37,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 22
            }
          },
          "message": "These consecutive `inherit` statements can be merged into one",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 4,
                "column": 22
              }
            },
            "fix": "inherit (pkgs) foo bar baz;"
          }
        }
      ]
    }
  ]
}
