bin/tests/snapshots/collapsible_inherits__41ad8578422acbeea6b27752ebb21f46_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
  inherit (pkgs) baz;
}
---
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   inherit (pkgs) baz;
   │   ─────────┬─────────  
   │            ╰─────────── These consecutive inherit statements can be merged into one
───╯
